--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "fitbit": {
     "appUUID": "fe63f225-3f27-47fc-9a8c-12261dcf0da9",
     "appType": "app",
-    "appDisplayName": "ProductivityFlow",
+    "appDisplayName": "WorkFlow",
     "iconFile": "resources/icon.png",
     "wipeColor": "#8bc34a",
     "requestedPermissions": [],
@@ -12,7 +12,7 @@
     ],
     "i18n": {
       "en": {
-        "name": "ProductivityFlow"
+        "name": "WorkFlow"
       }
     }
   }
